# MCP-floating-ball

./: .gitignore  ENVIRONMENT.md  README.md  README_ADVANCED_AI.md  TESTING.md  console_app.py  fix_imports.py  pyproject.toml  quick_test.py  simple_test.py  test_enhanced_nlp.py  test_integration.py  test_intelligent_features.py  test_intent.py  test_report.json  test_workflow_engine.py
config/: .env.example  logging.yaml  settings.yaml
data/: mcp_floating_ball.db
examples/: advanced_ai_demo.py  simple_demo.py  vision_integration_example.py  voice_integration_example.py
ocr_results/: ocr_result_20251115_183601.json
requirements/: base.txt  dev.txt  prod.txt
scripts/: quick_test.py  setup.py  test_all_features.py  test_api_services.py  test_console.py  test_report.json  test_tools.py  test_vision.py  test_voice.py
src/ai/: orchestrator.py
src/ai/providers/: dashscope.py  dashscope_v2.py  metaso.py  moonshot.py
src/assistant/: __init__.py  ab_testing.py  advanced_ai_controller.py  ai_assistant.py  ai_orchestrator.py  anomaly_detector.py  command_handler.py  enhanced_nlp_processor.py  intelligent_learner.py  model_fusion.py  nlp_processor.py  performance_monitor.py  task_dispatcher.py  tool_caller.py  workflow_manager.py  workflow_recommender.py
src/core/: config.py  config_manager.py  database.py  dependencies.py  exceptions.py  logging.py  predefined_workflows.py  workflow.py
src/interfaces/: console_agent.py
src/tools/: base.py  registry.py
src/tools/file/: __init__.py  format_converter.py  text_operations.py
src/tools/network/: __init__.py  multi_search.py  web_scraper.py
src/tools/system/: __init__.py  application_launcher.py  system_info.py  window_manager.py
src/vision/: __init__.py  image_analyzer.py  ocr_engine.py  screen_capture.py  vision_integration.py
src/voice/: __init__.py  speech_recognition.py  voice_activation.py  wake_word_detector.py
vision_output/ocr_results/: ocr_result_20251115_183607.json
