[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-floating-ball"
version = "1.0.0"
description = "现代化AI助手项目 - 集成多AI服务的智能助手"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    # 核心框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "dependency-injector>=4.41.0",

    # AI服务
    "openai>=1.12.0",
    "dashscope>=1.17.0",
    "httpx>=0.25.0",

    # 异步支持
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",

    # 配置和环境
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",

    # 日志和监控
    "loguru>=0.7.0",
    "rich>=13.7.0",

    # 数据处理
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",

    # 图像和视觉
    "opencv-python>=4.8.0",
    "pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "scikit-learn>=1.3.0",

    # 网页和搜索
    "beautifulsoup4>=4.12.0",
    "selenium>=4.16.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",

    # 系统控制
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",

    # 文档处理
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pypdf2>=3.0.1",
    "pypandoc>=1.12",

    # 手势识别
    "mediapipe>=0.10.0",

    # 音频处理
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "vosk>=0.3.45",

    # 其他工具
    "click>=8.1.0",
    "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx-mock>=0.10.0",

    # 代码质量
    "ruff>=0.1.8",
    "black>=23.11.0",
    "mypy>=1.8.0",
    "pyright>=1.1.0",

    # 开发工具
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]

prod = [
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-floating-ball"
Repository = "https://github.com/yourusername/mcp-floating-ball"
Documentation = "https://mcp-floating-ball.readthedocs.io/"
"Bug Tracker" = "https://github.com/yourusername/mcp-floating-ball/issues"

[project.scripts]
mcp-assistant = "src.interfaces.cli:main"
mcp-console = "scripts.test_console:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

# Ruff 配置
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["src"]

# Black 配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pytesseract.*",
    "pyautogui.*",
    "pygetwindow.*",
    "mediapipe.*",
    "pyaudio.*",
    "sounddevice.*",
    "selenium.*",
    "playwright.*",
    "pywin32.*",
    "pypandoc.*",
]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]